--- a/app/views/coupons/show.html.erb
+++ b/app/views/coupons/show.html.erb
@@ -1,10 +1,2 @@
-<!DOCTYPE html>
-<html>  
-    <head>
-        <title>All Coupons</title>
-    </head>
-    <body>
-        <h1><%= @coupon.store %></h1>
-        <h1><%= @coupon.coupon_code %></h1>
-    </body>
-</html>
+
+<h1><%= @coupon.coupon_code %> / <%= @coupon.store %></h1>
